Add repository field in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Rubocop format render",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FIRHQ/flow_format_render_rubocop.git"
+  },
   "directories": {
     "test": "test"
   },
